--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Booking confirmed — Central Executive Transfers</title>
   
 <meta charset="utf-8">
+  <base href="/CENTRAL-EXEC-SITE/">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="./assets/css/site.css">
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-HJ3FR5PRNW"></script>
